Corrected Mobile Navbar and Hero spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -224,6 +224,7 @@ nav {
         @include flex-center();
         flex-direction: column;
         text-align: center;
+        padding-top: 10rem;
 
         h1 {
             position: relative;
@@ -1206,6 +1207,11 @@ nav {
     html {
         font-size: 50%;
     }
+    nav {
+        display: flex;
+        justify-content: center;
+        height: 7.5rem;
+    }
     .hero, .promotions {
         .content, .promotions-hero-content {
             display: flex;
@@ -1244,7 +1250,7 @@ nav {
     }
     .nav-contact {
         position: fixed;
-        top: 10.25rem;
+        top: 7.7rem;
         left: 0;
         background: $white;
         text-align: center;
@@ -1255,12 +1261,30 @@ nav {
             font-size: 2.5rem;
         }
     }
+    .social-media {
+        display: none;
+    }
 }
 
 @media (max-width: 450px) {
+    
     .nav-contact {
         a {
             font-size: 2rem;
+        }
+    }
+    .hero {
+        .content {
+            position: relative;
+            padding-top: 10rem;
+
+            h1 {
+                padding-left: 0;
+                text-align: left;
+                &:before {
+                    display: none;
+                }
+            }
         }
     }
 }
